--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "three": "^0.154.0",
     "zustand": "^4.3.9"
@@ -32,7 +33,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
