--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
+    "mysql2": "^3.12.0",
     "next": "14.2.24",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -19,7 +21,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
-    "@types/node": "^20",
+    "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
