--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd-style": "^3.7.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
     "mysql2": "^3.12.0",
     "next": "14.2.24",
     "react": "^18",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
