--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd-style": "^3.7.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.12.0",
     "next": "14.2.24",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
