--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.5.0",
     "mysql2": "^3.12.0",
-    "next": "^15.1.7",
+    "next": "14.2.24",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-countup": "^6.5.3",
