UPDATE:     added excel and pdf export buttons, and dashboard cards to the dashboard page to view the totals 	modified:   package-lock.json 	modified:   package.json 	new file:   src/app/components/PDFConverter.tsx 	modified:   src/app/components/StatsCard.tsx 	modified:   src/app/components/testTable.tsx 	modified:   src/app/dashboard/page.tsx

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@react-pdf/renderer": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "antd-style": "^3.7.1",
     "bcryptjs": "^3.0.2",
