--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@react-pdf/renderer": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "antd": "^5.24.2",
     "antd-style": "^3.7.1",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
