--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.15",
     "@types/luxon": "^3.4.2",
