UPDATE:     - Added ServiceWorker to handle Push Notifications for Desktop and Web Notifications     - Attendance clock-in following the "Unable to clock out when 1 minute or below pa since nag time-in"     - Revision of Database structure for easy maintenance and scalability     - Minor fixes and improvements
	new file:   logicbase_ojt_db_V2.sql
	modified:   package-lock.json
	modified:   package.json
	modified:   src/app/api/attendance/get/logon/route.ts
	modified:   src/app/api/attendance/get/route.ts
	modified:   src/app/api/attendance/set/route.ts
	modified:   src/app/api/attendance/shiftHistory/route.ts
	modified:   src/app/api/auth/login/route.ts
	modified:   src/app/api/auth/signup/route.ts
	modified:   src/app/api/getCashierData/route.ts
	modified:   src/app/api/getCashierNames/route.ts
	modified:   src/app/api/getTransactionByDay/route.ts
	new file:   src/app/api/notifications/sendNotification/route.ts
	new file:   src/app/api/notifications/stream/route.ts
	new file:   src/app/api/notifications/subscribe/route.ts
	new file:   src/app/api/notifications/unsubscribe/route.ts
	modified:   src/app/api/transactions/addTransaction/route.ts
	modified:   src/app/api/transactions/getAllCashierTransactions/route.ts
	modified:   src/app/api/transactions/getTransactionByDay/route.ts
	modified:   src/app/components/LogoutButton.tsx
	modified:   src/app/components/attendance/CameraCapture.tsx
	new file:   src/app/components/notification/PushNotifications.tsx
	modified:   src/app/dashboard/layout.tsx
	modified:   src/app/lib/Interface/interface.ts
	modified:   src/app/login/page.tsx
	new file:   src/hooks/usePushNotification.ts
	modified:   src/stores/userStore.ts
	new file:   src/utils/CurrentTimeHelper.ts
	new file:   src/utils/ServiceWorker.ts

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "web-push": "^3.6.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -39,6 +41,8 @@
     "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-toastify": "^4.1.0",
+    "@types/web-push": "^3.6.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.24",
     "postcss": "^8",
